changed the scene again

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,5 +35,5 @@ body {
     )
     rgb(var(--background-start-rgb));
   /* Use the "Avenir Next" font-family for the body */
-  font-family: "Avenir Next", sans-serif;
+  font-family: 'Playfair Display', serif;
 }
